[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Sprites/Snake.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Snake.gd" type="Script" id=2]
[ext_resource path="res://Global/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Global/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 7 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.0
height = 32.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 4 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.99992
height = 38.0002

[sub_resource type="Animation" id=5]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Snake" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 32 )
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -39 )
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="GroundDetectors" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="GroundDetectors"]

[node name="GroundDetectorLeft" type="RayCast2D" parent="GroundDetectors/Left"]
position = Vector2( -25, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="Right" type="Node2D" parent="GroundDetectors"]

[node name="GroundDetectorRight" type="RayCast2D" parent="GroundDetectors/Right"]
position = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="WallDetectors" type="Node2D" parent="."]

[node name="WallDetectorLeft" type="RayCast2D" parent="WallDetectors"]
position = Vector2( -18, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="WallDetectorRight" type="RayCast2D" parent="WallDetectors"]
position = Vector2( 18, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 5 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]

[editable path="HitBox"]
